[package]
name = "zz-study"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"
license = "MIT or Apache-2.0"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = "i study github"
keywords = ["study", "github"]
categories = ["study"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
